--- a/src/style.css
+++ b/src/style.css
@@ -20,12 +20,14 @@ ul {
   box-sizing: border-box;
   font-size: 16px;
   font-family: 'Poppins', sans-serif;
+  color: #a7a7a7;
 }
 
 input,
 button,
 textarea {
   font-family: 'Poppins', sans-serif;
+  color: #a7a7a7;
 }
 
 ol,
@@ -34,14 +36,20 @@ ul {
 }
 
 .wrapper {
-  display: flex;
-  height: 100vh;
+  display: grid;
+  grid-template-columns: 241px 1fr;
+  grid-template-rows: 1fr auto;
+  grid-template-areas:
+    'sidebar main'
+    'footer footer';
+  min-height: 100vh;
 }
 
 .sidebar {
   padding-top: 24px;
-  background-color: #121212;
+  background-color: #000000;
   min-width: 241px;
+  grid-area: sidebar;
   display: flex;
   flex-direction: column;
 }
@@ -51,12 +59,11 @@ ul {
   margin-bottom: 18px;
 }
 
-.actions {
-  flex: 1;
-}
-
 .menu {
-  padding: 0 16px;
+  padding: 0 24px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .menu_item {
@@ -71,17 +78,101 @@ ul {
   align-items: center;
   border: none;
   background-color: transparent;
-  color: #fff;
+  font-size: 14px;
   font-weight: 700;
   padding: 0;
+  gap: 16px;
+}
+
+.menu_item button.active {
+  color: #fff;
+}
+
+.menu_item_icon {
+  fill: #a7a7a7;
+  width: 24px;
+  height: 24px;
+}
+
+.menu_item_icon.active {
+  fill: #fff;
 }
 
 .main {
-  flex: 1;
+  grid-area: main;
+  background: rgb(30, 30, 30);
+  background: linear-gradient(
+    180deg,
+    rgba(30, 30, 30, 1) 0%,
+    rgba(18, 18, 18, 1) 30%
+  );
+  display: flex;
+  flex-direction: column;
 }
 
-.menu_item_img{
+.menu_item_img {
   width: 24px;
   height: 24px;
-  margin-right: 16px;
+}
+
+.footer {
+  grid-area: footer;
+}
+
+.header {
+  background-color: #101010;
+  padding: 16px 32px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.goto_container {
+  display: flex;
+  gap: 16px;
+}
+
+.goto_btn {
+  width: 32px;
+  height: 32px;
+  background-color: rgb(0, 0, 0, 70%);
+  border-radius: 50%;
+  cursor: not-allowed;
+  padding: 0;
+  margin: 0;
+  border: none;
+  display: flex;
+}
+
+.goto_btn__icon {
+  fill: #a7a7a7;
+  width: 22px;
+  height: 22px;
+  margin: auto;
+}
+
+.header__wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.header__wrapper--link_container {
+  display: flex;
+  gap: 16px;
+  margin: 0 16px;
+}
+
+.header__wrapper--link_container a {
+  font-weight: 700;
+  color: #a7a7a7;
+  text-decoration: none;
+  font-size: 16px;
+  letter-spacing: 1.76px;
+}
+
+.slash {
+  background: #fff;
+  height: 25px;
+  margin: 0 16px;
+  width: 1px;
 }
