--- a/src/style.css
+++ b/src/style.css
@@ -284,3 +284,59 @@ a {
   margin-top: 4px;
   font-size: var(--text-sm);
 }
+
+.signup-wrapper {
+  max-width: 450px;
+  margin: 0 auto;
+}
+
+.header-container {
+  padding: 40px 0 32px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.header-container__title {
+  font-size: var(--text-xl);
+  font-weight: 700;
+  color: var(--gray-900);
+  text-align: center;
+  margin-top: 40px;
+  line-height: 36px;
+}
+
+.signup-options {
+  display: flex;
+  flex-direction: column;
+  gap: 22px;
+  max-width: 394px;
+  margin: 0 auto;
+}
+
+.or-text {
+  margin: 32px auto;
+  max-width: 85%;
+  text-align: center;
+  display: block;
+  position: relative;
+}
+
+.or-text::before {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 42%;
+  border-top: 1px solid var(--gray-300);
+  top: 13px;
+}
+
+.or-text::after {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 42%;
+  border-top: 1px solid var(--gray-300);
+  top: 13px;
+  right: 0;
+}
