--- a/src/form.css
+++ b/src/form.css
@@ -5,8 +5,8 @@
 }
 
 body{
-  padding: 15px;
-  margin: 0;
+  /* padding: 15px; */
+  /* margin: 2%; */
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
   background-color: #65D36E;
@@ -75,4 +75,6 @@ body{
     background-color: #65D36E;
 }
 
-  
+footer {
+    font-weight: 400;
+} 
