--- a/src/form.css
+++ b/src/form.css
@@ -7,6 +7,9 @@
 body{
   /* padding: 15px; */
   /* margin: 2%; */
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
   background-color: #65D36E;
