--- a/src/form.css
+++ b/src/form.css
@@ -86,26 +86,26 @@ footer {
     margin: 22px auto;
     max-width: 85%;
     text-align: center;
-    font-weight: 200;
     display: block;
     position: relative;
+    width: 400px;
   }
   
-  .or-text::before {
+.or-text::before {
     content: '';
     position: absolute;
     display: block;
     width: 42%;
-    border-top: 1px solid var(--gray-300);
+    border-top: 1px solid rgb(88, 85, 85);
     top: 13px;
-  }
+}
   
-  .or-text::after {
+.or-text::after {
     content: '';
     position: absolute;
     display: block;
     width: 42%;
-    border-top: 1px solid var(--gray-300);
+    border-top: 1px solid rgb(88, 85, 85);
     top: 13px;
     right: 0;
-  }
+}
